New entries should be added at the top

2005-04-11 Incorporated Werner's wx patch -- wx backend should be
           compatible with wxpython2.4 and recent versions of 2.5.
           Some early versions of wxpython 2.5 will not work because
           there was a temporary change in the dc API that was rolled
           back to make it 2.4 compliant

2005-04-11 modified tkagg show so that new figure window pops up on
           call to figure

2005-04-11 fixed wxapp init bug 

2005-04-02 updated backend_ps.draw_lines, draw_markers for use with the
           new API - DSD

2005-04-01 Added editable polygon example

==========================================================================

2005-03-31 0.74 released

2005-03-30 Fixed and added checks for floating point inaccuracy in
           ticker.Base - DSD

2005-03-30 updated /ellipse definition in backend_ps.py to address bug
           #1122041 - DSD

2005-03-29 Added unicode support for Agg and PS - JDH

2005-03-28 Added Jarrod's svg patch for text - JDH

2005-03-28 Added Ludal's arrow and quiver patch - JDH

2005-03-28 Added label kwarg to Axes to facilitate forcing the
           creation of new Axes with otherwise identical attributes

2005-03-28 Applied boxplot and OSX font search patches

2005-03-27 Added ft2font NULL check to fix Japanase font bug - JDH

2005-03-27 Added sprint legend patch plus John Gill's tests and fix --
           see examples/legend_auto.py  - JDH

==========================================================================

2005-03-19 0.73.1 released

2005-03-19 Reverted wxapp handling because it crashed win32 - JDH

2005-03-18 Add .number attribute to figure objects returned by figure() - FP

===========================================================================
2005-03-18 0.73 released

2005-03-16 Fixed labelsep bug

2005-03-16 Applied Darren's ticker fix for small ranges - JDH

2005-03-16 Fixed tick on horiz colorbar - JDH

2005-03-16 Added Japanses winreg patch - JDH
